--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
   },
   "version": "0.1.0",
   "devDependencies": {
+    "@prettier/plugin-ruby": "^3.1.2",
+    "prettier": "^2.7.1",
     "webpack-dev-server": "^3"
   }
 }
